added more instructions for working with Antora tooling

--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -1,4 +1,4 @@
-= An Example Quick Course
+= Creating Machine Learning Models with Red Hat OpenShift Data Science
 :navtitle: Home
 
 == Introduction
