--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -8,7 +8,7 @@ This course is the fourth in a series of 6 courses about Red Hat OpenShift Data 
 2. https://redhatquickcourses.github.io/rhods-admin[Red Hat OpenShift Data Science Administration]
 3. Data Analysis and Visualization with Red Hat OpenShift Data Science (Under Development)
 4. Creating Machine Learning Models with Red Hat OpenShift Data Science (_This course_)
-5. https://redhatquickcourses.github.io/rhods-deploy[Machine Learning Models with Red Hat OpenShift Data Science]
+5. https://redhatquickcourses.github.io/rhods-deploy[Deploying Machine Learning Models with Red Hat OpenShift Data Science]
 6. https://redhatquickcourses.github.io/rhods-pipelines[Automation using Data Science Pipelines]
 
 NOTE: After you have completed all the courses in the learning path, you can attempt the https://github.com/RedHatQuickCourses/rhods-qc-apps/tree/main/7.hands-on-lab["Hit the RHODS"] exercise, that tests your understanding of the concepts taught in all the courses.
